# ALPACA

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  dockerfile  inputfile.xml
.github/workflows/: cmake.yml
Utilities/InstallScripts/: cmake-3.16.0_installer.sh  hdf5-1.8.21_installer.sh  installNanoshockSoftware.sh  mpich-3.3.2_installer.sh  openmpi-4.0.2_installer.sh  paraview-5.8.0_installer.sh  vscode-1.44.0_installer.sh
Utilities/PythonScripts/: check_symmetry.py  couette.py  create_executable.py  modify_inputfile.py  oscillatingdrop.py  prepare_user_settings_for_build.py  remove_volatile_strings_from_logfile.py  sheardrop.py  sod_analysis.py  trim_output.py
Utilities/TestSuite/: compile_merge_suite.sh  initialize_cluster.sh  requirements.txt  run_merge_testsuite.job  run_testsuite.py  testsuite.job
cmake/: compiler.cmake  dimension.cmake  documentation.cmake  git_hash.cmake  performance_flags.cmake  warning_flags.cmake
doc/: references.bib
src/: block.cpp  block.h  fenv.h  fluid_field_buffers.h  fluid_fields_definitions.h  halo_manager.cpp  halo_manager.h  helper_functions.cpp  helper_functions.h  index_transformations.h  initial_condition.cpp  initial_condition.h  levelset_block.cpp  levelset_block.h  log_writer.cpp  log_writer.h  main.cpp  mathematical_functions.h  modular_algorithm_assembler.cpp  modular_algorithm_assembler.h  simulation_setup.cpp  simulation_setup.h  space_filling_curves.h  unit_handler.cpp  unit_handler.h  user_expression.cpp  user_expression.h
src/boundary_condition/: boundary_constants.h  boundary_specifications.h  external_halo_manager.cpp  external_halo_manager.h  fixed_value_boundary_condition.h  fluid_boundary_condition.h  levelset_boundary_condition.h  symmetry_boundary_condition.h  wall_boundary_condition.h  zero_gradient_boundary_condition.h
src/communication/: communication_manager.cpp  communication_manager.h  communication_statistics.cpp  communication_statistics.h  communication_types.cpp  communication_types.h  exchange_types.h  internal_boundary_types.h  internal_halo_manager.cpp  internal_halo_manager.h  mpi_utilities.h
src/enums/: datatype_for_mpi_definition.h  dimension_definition.h  direction_definition.h  flux_splitting.h  geometry_settings.h  interface_tag_definition.h  norms.h  remesh_identifier.h  restore_mode.h  signal_speed.h  unit_type.h  vertex_filter_type.h
src/input_output/: hdf5_utilities.h  input_output_manager.cpp  input_output_manager.h  inputfile_parser.cpp  inputfile_parser.h  output_mesh_generator.cpp  output_mesh_generator.h  output_types.h  output_writer.cpp  output_writer.h  restart_manager.cpp  restart_manager.h  textbased_file_writer.h  xdmf_file_writer.cpp  xdmf_file_writer.h  xdmf_output_writer.cpp  xdmf_output_writer.h  xdmf_utilities.h
src/integrator/: runge_kutta_2_TVD.h  runge_kutta_3_TVD.h  time_integrator.h  time_integrator_setup.h
src/interface_interaction/: interface_quantity_calculator.cpp  interface_quantity_calculator.h  interface_term_solver.cpp  interface_term_solver.h
src/interface_tags/: interface_tag_functions.cpp  interface_tag_functions.h
src/materials/: material.h  material_manager.cpp  material_manager.h  material_names.h  noble_abel_stiffened_gas.cpp  noble_abel_stiffened_gas.h  stiffened_gas.cpp  stiffened_gas.h  stiffened_gas_complete_safe.cpp  stiffened_gas_complete_safe.h  stiffened_gas_safe.cpp  stiffened_gas_safe.h  waterlike_fluid.cpp  waterlike_fluid.h
src/multiresolution/: averager.cpp  averager.h  multiresolution.cpp  multiresolution.h  threshold_computer.h
src/prime_states/: euler_prime_state_handler.h  prime_state_handler.h  (+1 more)
test/: test_helper_functions.cpp  test_main.cpp  test_mathematical_functions.cpp
(+209 files in other folders)
